<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/color_light_green1">

    <Button
        android:id="@+id/selectImageButton_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="@string/select_image" />

    <Button
        android:id="@+id/deleteImageButton_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="6dp"
        android:text="@string/delete_image" />

    <ImageView
        android:id="@+id/imageViewItem_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectImageButton_edit"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />

    <EditText
        android:id="@+id/itemName_edit"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@id/imageViewItem_edit"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/item_name_editpage"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/itemDescription_edit"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@id/itemName_edit"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/description_editpage"
        android:inputType="text"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layoutMakeModel_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemDescription_edit"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/itemMake_edit"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:hint="@string/make_editpage"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/itemModel_edit"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:hint="@string/model_editpage"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutValueSerial_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutMakeModel_edit"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/itemValue_edit"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:hint="@string/value_editpage"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/itemSerialNumber_edit"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:hint="@string/serial_number_editpage"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_below="@+id/layoutValueSerial_edit"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="6dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/date_edit"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:hint="Date (dd-mm-yyyy)"
            android:inputType="textPersonName" />

    </LinearLayout>

    <EditText
        android:id="@+id/itemComment_edit"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_below="@+id/dateLayout"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:hint="@string/comment_editpage" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmButton_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemComment_edit"
        android:layout_marginTop="11dp"
        android:tint="@color/color_light_green1"
        app:backgroundTint="@color/color_light_green1"
        app:srcCompat="@android:drawable/checkbox_on_background" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteItemButton_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemComment_edit"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="19dp"
        app:backgroundTint="@color/color_light_green1"
        app:srcCompat="@android:drawable/btn_dialog" />

    <Button
        android:id="@+id/backButton_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="246dp"
        android:text="back" />

</RelativeLayout>
